# unblu-mcp

./: .copier-answers.yml  .env.example  .envrc  .gitattributes  .gitignore  .lychee.toml  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_TEMPLATE.md  SECURITY.md  _typos.toml  duties.py  mkdocs.yml  prek.toml  pyproject.toml  server.json  zensical.toml
.github/: FUNDING.yml  actionlint.yaml
.github/ISSUE_TEMPLATE/: 1-bug.md  2-feature.md  3-docs.md  4-change.md  config.yml
.github/workflows/: auto-merge-dependabot.yml  ci.yml  docs.yml  mcp-registry-publish.yml  release.yml
.windsurf/rules/: graphite-cli.md  task-runner.md
config/: .markdownlint.yaml  bandit.toml  k8s_environments.example.yaml  mcp_policies.json  pytest.ini  ruff.toml
config/vscode/: launch.json
contrib/k8s/: README.md  unblu-mcp-k8s
docs/: getting-started.md  index.md  kubernetes.md  logging.md  programmatic.md  safety.md  tools.md  troubleshooting.md
docs/.overrides/partials/: comments.html
docs/reference/: api.md
scripts/: analyze_swagger.py  check_lfs_files.sh  check_no_internal_urls.sh  gen_credits.py  get_version.py  test_all_operations.py  test_client.py  test_mcp_tools_exhaustive.py
src/unblu_mcp/: __init__.py  __main__.py  k8s_environments.template.yaml  swagger.json
src/unblu_mcp/_internal/: cli.py  debug.py  exceptions.py  logging.py  models.py  pagination.py  providers.py  providers_k8s.py  server.py
tests/: __init__.py  test_all_operations.py  test_api.py  test_cli.py  test_logging.py  test_mcp_client.py  test_policy.py  test_providers_k8s.py  test_server.py  test_tools_integration.py
