
# [build-system]
# requires = ["uv_build"]
# build-backend = "uv_build"

[project]
name = "unblu-mcp"
description = "A model context protocol server for interacting with Unblu deployments."
authors = [{name = "Ismar Iljazovic", email = "ismar@gmail.com"}]
license = "ISC"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13"
keywords = []
version = "0.0.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "prek",
]

[project.urls]
Homepage = "https://ichoosetoaccept.github.io/unblu-mcp"
Documentation = "https://ichoosetoaccept.github.io/unblu-mcp"
Changelog = "https://ichoosetoaccept.github.io/unblu-mcp/changelog"
Repository = "https://github.com/ichoosetoaccept/unblu-mcp"
Issues = "https://github.com/ichoosetoaccept/unblu-mcp/issues"
Discussions = "https://github.com/ichoosetoaccept/unblu-mcp/discussions"
Gitter = "https://gitter.im/unblu-mcp/community"
Funding = "https://github.com/sponsors/ichoosetoaccept"

[project.scripts]
unblu-mcp = "unblu_mcp._internal.cli:main"

[dependency-groups]
maintain = [
    "build",
    "yore",
    "python-semantic-release",
]
ci = [
    "duty",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-randomly",
    "pytest-xdist",
    "respx",
    "ty",
    "poethepoet",
    "bandit",
    "vulture",
    "pyupgrade",
    "mypy",
    "types-markdown",
    "types-pyyaml",
]
local = [
    "prek",
]
docs = [
    "markdown-callouts",
    "markdown-exec",
    "mkdocs",
    "mkdocs-coverage",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-llmstxt",
    "mkdocs-material",
    "mkdocs-minify-plugin",
    "mkdocs-section-index",
    "mkdocstrings[python]",
    # YORE: EOL 3.10: Remove line.
    "tomli; python_version < '3.11'",
]

[tool.ty.src]
exclude = ["scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
default-groups = ["maintain", "ci", "docs", "local"]
package = true

[tool.poe.tasks]
# Quality checks
lint = "ruff check src tests duties.py scripts --config config/ruff.toml"
format = "ruff format src tests duties.py scripts --config config/ruff.toml"
typecheck = "ty check src tests duties.py scripts"
security = "bandit -r src -c config/bandit.toml"
deadcode = "vulture src tests --min-confidence 80"
upgrade = "pyupgrade --py313-plus src/**/*.py tests/**/*.py"

# Testing
test = "pytest tests -c config/pytest.ini"
test-cov = "pytest tests -c config/pytest.ini --cov=src --cov-report=html"

# Combined tasks
check = ["lint", "typecheck", "security", "deadcode"]
fix = ["format", "upgrade"]

# Run pre-commit hooks
prek = "prek run --all-files"

# MCP
inspect = "DANGEROUSLY_OMIT_AUTH=true npx -y @modelcontextprotocol/inspector uv run unblu-mcp"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
build_command = "uv build"
commit_message = "chore(release): {version}"
tag_format = "{version}"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "deps", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
